jenkins/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod-${VERSION}
  labels:
    zone: test
    version: v1
    app: dropwizard
spec:
  containers:
  - name: app-dropwizard
    image: notregistered/dropw-app
    ports:
    - name: access-port
      containerPort: 8080
