jenkins/jenkins-pod-wvs.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
#  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
#      automountServiceAccountToken: false
      containers:
      - name: master
        image: jenkins/jenkins:latest
        ports:
        - containerPort: 8080
        - containerPort: 50000
#        readinessProbe:
#          httpGet:
#            path: /login
#            port: 8080
#          periodSeconds: 10
#          timeoutSeconds: 5
#          successThreshold: 2
#          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-vol
        - mountPath: /var/run/docker.sock
          name: docker-socket
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      volumes:
      - name: docker-socket
        hostPath:
           path: /var/run/docker.sock
      - name: jenkins-vol
        persistentVolumeClaim:
          claimName: jenkins-vol
