jenkins/jenkins-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-pod2
  labels:
    zone: test
    version: v1
    app: jenkins
spec:
  containers:
  - name: test-jenkins
    image: jenkins/jenkins:latest
    ports:
    - name: access-port
      containerPort: 8080
