jenkins/app_param.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    zone: test
    version: v1
    app: dropwizard
spec:
  containers:
  - name: app-dropwizard
    image: notregistered/dropw-app
    ports:
    - name: access-port
      containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: dropwizardapiVersion: extensions/v1beta1
---
kind: Ingress
metadata:
  name: app-ingress-nginx
#  annotations:
#     kubernetes.io/ingress.class: "nginx"
#    ingress.kubernetes.io/rewrite-target: /
#    nginx.org/proxy-connect-timeout: "30s"
#    nginx.org/proxy-read-timeout: "20s"
#    nginx.org/client-max-body-size: "4m"
#    nginx.org/server-snippets: |
spec:
  tls:
   - hosts:
     - app.devcluster.eu-de.containers.appdomain.cloud
     secretName: devcluster
  rules:
  - host: app.devcluster.eu-de.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8080
